--- a/csindexeportfolio.css
+++ b/csindexeportfolio.css
@@ -7,16 +7,22 @@ body{
     border-style: none;
 }
 .card-body{
-    background-color: antiquewhite;
+    background-color: rgb(0, 110, 255);
     opacity: 0.8;
-    color: black;
+    color: white;
     border-radius: 5px;
     border-style: none;
+    padding: 25px;
 }
 .card-header{
-    background-color: antiquewhite;
+    background-color: rgb(0, 110, 255);
     opacity: 0.8;
-    color: black;
+    color: white;
     border-radius: 10px;
     border-style: none;
+}
+.picture{
+    opacity: 1;
+    height: 300px;
+    width: 100%;
 }
