--- a/csindexeportfolio.css
+++ b/csindexeportfolio.css
@@ -8,7 +8,6 @@ body{
 }
 .card-body{
     background-color: rgb(0, 110, 255);
-    opacity: 0.8;
     color: white;
     border-radius: 5px;
     border-style: none;
@@ -16,11 +15,13 @@ body{
 }
 .card-header{
     background-color: rgb(0, 110, 255);
-    opacity: 0.8;
     color: white;
     border-radius: 10px;
     border-style: none;
+    display: flex;
+    justify-content: center;
 }
+
 .picture{
     opacity: 1;
     height: 300px;
