--- a/csindexeportfolio.css
+++ b/csindexeportfolio.css
@@ -27,3 +27,13 @@ body{
     height: 300px;
     width: 100%;
 }
+
+.contact{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.send{
+    color: white;
+}
