--- a/csindexeportfolio.css
+++ b/csindexeportfolio.css
@@ -14,7 +14,7 @@ body{
     padding: 25px;
 }
 .card-header{
-    background-color: rgb(0, 110, 255);
+    background-color: rgb(4, 182, 143);
     color: white;
     border-radius: 10px;
     border-style: none;
@@ -37,10 +37,13 @@ body{
 
 .send{
     color: white;
+    border-color: white;
+    border-style: dashed;
 }
 
 .send :hover{
     border: 1px;
     border-style: dashed;
+    border-color: black;
     color: black;
 }
